# fbthrift-playground

./: -E-dM.out  .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
playground/: CMakeLists.txt
playground/echo/: CMakeLists.txt  client.cc  server.cc
playground/idl/: CMakeLists.txt  echo.thrift
scripts/: build-deps.sh  build.sh  merge_compdb.py  update_fb_deps.sh
